--- a/RelabClient/src/app/app.component.html
+++ b/RelabClient/src/app/app.component.html
@@ -1,4 +1,7 @@
 {{title}}
+<input type="text" name="pagina" #pagina>
+<!--Ricordiamo che per prendere il valore del testo dobbiamo mettere punto value che si riferisce a #pagina-->
+<button (click)="cerca_pagina(pagina.value)">Clicca</button>
 <google-map  #mapRef [center]="center" [zoom]="zoom" [width]="1000">  
 
     <map-marker *ngFor="let markerOption of markerList" [options] = "markerOption">
